welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:26: error: ';' expected but 'else' found.
			  else if  ( getDirection() == Direction.EAST ) {
                          ^